GITBOOK-7345: IDEs: add Troubleshooting information (General/Eclipse)